style(App): Add missing hightighting for the winning cells

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@ body {
     background-color: #ffd7ba;
 }
 
+.winning {
+    background-color: yellow;
+  }
+
 .board-row{
     display: flex;
     align-items: center;
